--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 </head>
 <body>
      <h1>普通链接</h1>
-    <a herf="www.baidu.com" target="_blank">百度</a>
+    <a href="www.baidu.com" target="_blank">百度</a>
     <h1>邮件链接</h1>
-    <a herd="mailto:704462013@qq.com">与我联系</a>
+    <a href="mailto:704462013@qq.com">与我联系</a>
     <h1>内部链接</h1>
      <a href="#qita">其他</a>
      <h1>热点链接</h1>
