--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
      <h1>普通链接</h1>
-    <a href="www.baidu.com" target="_blank">百度</a>
+    <a href="http://www.baidu.com" target="_blank">百度</a>
     <h1>邮件链接</h1>
     <a href="mailto:704462013@qq.com">与我联系</a>
     <h1>内部链接</h1>
