--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
      <h1>普通链接</h1>
     <a href="http://www.baidu.com" target="_blank">百度</a>
     <h1>邮件链接</h1>
-    <a href="mailto:704462013@qq.com">与我联系</a>
+    <a href="mailto:704462013@qq.com">邮件go</a>
     <h1>内部链接</h1>
      <a href="#qita">其他</a>
      <h1>热点链接</h1>
