--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h1>内部链接</h1>
      <a href="#qita">其他</a>
      <h1>热点链接</h1>
-    <img src="http://g.hiphotos.baidu.com/zhidao/pic/item/37d3d539b6003af33c9aba42362ac65c1038b6eb.jpg" usemap="#zhutao"alt="">
+    <img src="http://img3.redocn.com/tupian/20150106/xingfufeizhuliuxiangkuang_3802988.jpg" usemap="#zhutao"alt="">
     <map name="zhutao">
         <area shape="rect" coords="0,0,110,260" href="index.html" alt="">
     </map>
