--- a/zhang.html
+++ b/zhang.html
@@ -1,17 +1,16 @@
 <!doctype html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<title>张铸涛个人网站</title>
+    <meta charset="UTF-8">
+    <title>个人网站</title>
 </head>
-<body>
-<figure>
-	<figcaption>本地图片</figcaption>
-	<img src="./images/zhang.jpg"  alt="桌面">
-</figure>
-<figure>
-	<figcaption>网络图片</figcaption>
-	<img src="http://gbres.dfcfw.com/Files/picture/20160208/size500/FC292998E285B5BB56AD004A2687BC80.jpg" width="150" height="150" alt="猴年大吉">
-</figure>
+    <style>
+    body{
+      background-color: red;
+      background-image:url("http://pic2.cxtuku.com/00/08/67/b8018ce6a170.jpg"); 
+      background-position: center;
+      background-attachment: fixed;  
+      background-repeat: no-repeat;
+    }
 </body>
 </html>
